src/objects/npsp__Allocations_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the allocation of Opportunities into General Accounting Units.</description>
    <fields>
        <fullName>npsp__Default_Allocations_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</description>
        <inlineHelpText>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</inlineHelpText>
        <label>Default Allocations Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Default__c</fullName>
        <description>Holds the ID of the default General Accounting Unit for creation of default allocations or for the allocation of non allocated amounts.</description>
        <inlineHelpText>Holds the ID of the default General Accounting Unit for creation of default allocations or for the allocation of non allocated amounts.</inlineHelpText>
        <label>Default General Accounting Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Excluded_Opp_RecTypes__c</fullName>
        <description>Opportunity Record Types to exclude from calculations of Allocations rollups.</description>
        <inlineHelpText>Opportunity Record Types to exclude from calculations of Allocations rollups.</inlineHelpText>
        <label>Excluded Opp RecTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Excluded_Opp_Types__c</fullName>
        <description>Excluded Opportunity Types from Allocations rollups.</description>
        <inlineHelpText>Excluded Opportunity Types from Allocations rollups.</inlineHelpText>
        <label>Excluded Opp Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Rollup_N_Day_Value__c</fullName>
        <defaultValue>365</defaultValue>
        <description>This value affects the number of days to count for N Days Allocations rollup fields.</description>
        <inlineHelpText>This value affects the number of days to count for N Days Allocations rollup fields.</inlineHelpText>
        <label>Rollup N Day Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Use_Fiscal_Year_for_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will cause Allocation rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year. NOTE: Custom Fiscal Year Settings are NOT supported.</description>
        <inlineHelpText>Checking this box will cause Allocation rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year. NOTE: Custom Fiscal Year Settings are NOT supported.</inlineHelpText>
        <label>Use Fiscal Year for Rollups</label>
        <type>Checkbox</type>
    </fields>
    <label>Allocations Settings</label>
</CustomObject>